# t3

./: CMakeLists.txt  Profiles.json  README.md  flash_phone.cpp  flash_phone.h  flash_phone.hpp  main-2.cpp  main.cpp  other.cpp  other.h  other.hpp  sqlite.cpp  sqlite.h  start.py  t3.cpp  t3.h  t3.hpp
